--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,59 @@ header p{
     font-size: 2em;
 }
 
+/* Competencias */
+
+#competencias {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    /* margin-left: 20px;     -> tirar as faixas brancas
+    margin-right: 20px; */
+    background-color: rgb(171, 209, 240);
+
+}
+
+
+#competencias h2 {
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 2em;
+    text-align: center;
+
+}
+
+#competencias h3, p {
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 1em;
+    text-align: center;
+
+}
+
+#competencias a {
+    text-decoration: none;
+}
+
+#competencias img{
+    width: 100%;
+    margin-bottom: 0; 
+}
+
+#competencias .comp p{
+    /* border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    border-radius: 20%; */
+    margin-top: 0;
+    font-family: 'Trocchi', sans-serif;
+    padding-right: 15px;
+    padding-left: 15px;
+    line-height: 1.5;
+    background-color: rgb(171, 209, 240);
+
+}
+
 
 
 
@@ -242,6 +295,28 @@ header p{
         height: 3.5cm;
     }
   
+
+    /* Competencias */
+    #competencias {
+        
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding-left: 20px;
+        padding-right: 20px;
+        background-color: rgb(171, 209, 240);
+        
+    }
+
+    #competencias h2, h3{
+        width: 100%;
+        text-align: center;
+    }
+
+    #competencias .comp {
+        width: 33.3%;
+        text-align: center;
+        background-color: rgb(171, 209, 240);
+    }
     
 }
 
