--- a/css/styles.css
+++ b/css/styles.css
@@ -175,8 +175,8 @@ header p{
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
-    /* margin-left: 20px;     -> tirar as faixas brancas
-    margin-right: 20px; */
+    padding-left: 20px;     
+    padding-right: 20px;
     background-color: rgb(171, 209, 240);
 
 }
