--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 /* Para Mobile */
 
 /* Formatação Geral */
@@ -222,6 +221,105 @@ header p{
 }
 
 
+.trab img:hover{
+    -ms-transform: rotate(-10deg);
+    -webkit-transform:rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+    padding-right:10px;
+    padding-left:10px;
+    border-radius: 20%;
+    
+
+}
+
+/* Hobbies */
+#hobby{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    width: 100%;
+    background-color: rgb(155, 189, 216) ;
+}
+
+#hobby h2{
+   padding-bottom: 20px;
+   padding-top: 10px;
+   font-size: 2em;
+   text-align: center;
+}
+
+.hobby{
+    width: 50%;
+    align-items: center;
+    text-align: center;
+}
+
+.hobby h3{
+   font-size: 1.5em;
+   margin-top: 30px;
+    margin-bottom: 14px;
+}
+#hobby img{
+    border-radius: 10%;
+    height: 8cm;
+    width: 8cm;
+    margin-bottom: 40px;
+}
+
+
+/* Contato */
+#contato{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(171, 205, 238);
+    width: 100%;
+    
+}
+
+#contato h2{
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-width: 20px;
+    margin-bottom: 20px;
+    font-size: 2em;
+    text-align: center;
+    color: #161616;
+}
+
+#contato > p{
+    margin-bottom: 20px;
+    font-size: 1.2em;
+    text-align: center;
+    color: #161616;
+}
+
+#contato a{
+    text-decoration: none;
+    color: firebrick;
+    text-align: center;
+}
+
+#contato img{
+    width: 2cm;
+    height: 2cm;
+}
+
+
+/* footer */
+
+footer{
+    text-align: center;
+    width: 100%;
+    background-color: rgb(93, 114, 139);
+    color:#F8F8FF;
+    padding-top:40px;
+    padding-bottom:40px;
+}
 
 
 /* Para Desktop */
@@ -318,6 +416,34 @@ header p{
         background-color: rgb(171, 209, 240);
     }
     
+    
+
+    /* Contato */
+
+    #contato {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        max-width: 100%;
+        margin: 0, auto;
+        text-align: center;
+        max-height: 40vh;
+        width: 100%;
+
+
+    }
+
+    #contato h2, 
+    #contato p {
+        text-align: center;
+        width: 100%;
+    }
+
+
+
+
+
+
 }
 
 /* #E6E6FA -> lanavder -> azulzin pastel */
