--- a/css/styles.css
+++ b/css/styles.css
@@ -236,12 +236,17 @@ header p{
 
 /* Hobbies */
 #hobby{
-    display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    padding-top: 20px;
     width: 100%;
+    justify-content: center;
+    padding-top: 20px;
+    min-height: 80vh;
+   
     background-color: rgb(155, 189, 216) ;
+    
+    
 }
 
 #hobby h2{
@@ -252,7 +257,7 @@ header p{
 }
 
 .hobby{
-    width: 50%;
+    width: 100%;
     align-items: center;
     text-align: center;
 }
@@ -260,7 +265,7 @@ header p{
 .hobby h3{
    font-size: 1.5em;
    margin-top: 30px;
-    margin-bottom: 14px;
+   margin-bottom: 14px;
 }
 #hobby img{
     border-radius: 10%;
